# libtranslate-rust

./: .gitignore  Cargo.toml  README.md
src/: error.rs  language.rs  lib.rs
src/api/: mod.rs
src/api/google/: google_translate.rs
src/translator/: dispatcher.rs  mod.rs  translator.rs
tests/: test_google_translate.rs
