[package]
name = "libtranslate"
version = "0.1.0"
edition = "2021"
authors = [ "Manyy" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.0", features = ["signal", "macros", "process", "rt-multi-thread"] }
reqwest = { version = "0.12.5" }
thiserror = { version = "1.0.63" }
scraper = { version = "0.18.1" }
serde = "1.0.204"
serde_json = "1.0"
regex = "1.10.5"
async-trait = "0.1.81"
rand = "0.8.5"

[features]